--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,7 @@ h2 {
     left: -100%;
     width: 100%;
     height: 100vh;
-    background: rgba(255, 255, 255, 0.95);
+    background: black;
     backdrop-filter: blur(10px);
     flex-direction: column;
     padding-top: 100px;
